<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:id="@+id/tv_judul_buku"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        android:layout_weight="1"
        android:textSize="24sp"
        android:fontFamily="@font/segoeui_bold"
        tools:text="@string/judul_buku"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_cover_detail"
            android:layout_width="155dp"
            android:layout_height="230dp"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:transitionName="cover"
            android:src="@color/teal_200"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_penulis_buku"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:fontFamily="@font/segoeui_bold"
            app:layout_constraintStart_toEndOf="@+id/iv_cover_detail"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/detail_penulis_buku"/>

        <TextView
            android:id="@+id/tv_value_penulis_buku"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/segoeui"
            app:layout_constraintStart_toEndOf="@+id/tv_penulis_buku"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Penulis Buku"/>

        <TextView
            android:id="@+id/tv_penerbit_buku"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:fontFamily="@font/segoeui_bold"
            app:layout_constraintStart_toEndOf="@+id/iv_cover_detail"
            app:layout_constraintTop_toBottomOf="@id/tv_penulis_buku"
            android:text="@string/detail_penerbit_buku"/>

        <TextView
            android:id="@+id/tv_value_penerbit_buku"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/segoeui"
            app:layout_constraintStart_toEndOf="@+id/tv_penerbit_buku"
            app:layout_constraintTop_toBottomOf="@id/tv_value_penulis_buku"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Penerbit Buku"/>

        <TextView
            android:id="@+id/tv_tahun_terbit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:fontFamily="@font/segoeui_bold"
            app:layout_constraintStart_toEndOf="@+id/iv_cover_detail"
            app:layout_constraintTop_toBottomOf="@id/tv_penerbit_buku"
            android:text="@string/detail_tahun_terbit"/>

        <TextView
            android:id="@+id/tv_value_tahun_terbit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/segoeui"
            app:layout_constraintStart_toEndOf="@+id/tv_tahun_terbit"
            app:layout_constraintTop_toBottomOf="@id/tv_value_penerbit_buku"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Tahun Terbit"/>

        <TextView
            android:id="@+id/tv_jumlah_halaman"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:fontFamily="@font/segoeui_bold"
            app:layout_constraintStart_toEndOf="@id/iv_cover_detail"
            app:layout_constraintTop_toBottomOf="@id/tv_value_tahun_terbit"
            android:text="@string/detail_jumlah_halaman"/>

        <TextView
            android:id="@+id/tv_value_jumlah_halaman"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/segoeui"
            app:layout_constraintStart_toEndOf="@id/tv_jumlah_halaman"
            app:layout_constraintTop_toBottomOf="@id/tv_value_tahun_terbit"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Halaman"/>

        <TextView
            android:id="@+id/tv_stok_buku"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:fontFamily="@font/segoeui_bold"
            app:layout_constraintStart_toEndOf="@id/iv_cover_detail"
            app:layout_constraintTop_toBottomOf="@id/tv_value_jumlah_halaman"
            android:text="@string/detail_stok_buku"/>

        <TextView
            android:id="@+id/tv_value_stok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/segoeui"
            app:layout_constraintStart_toEndOf="@id/tv_stok_buku"
            app:layout_constraintTop_toBottomOf="@id/tv_value_jumlah_halaman"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Stok"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>